奥比中光环境ok

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,11 @@
             android:name=".MainActivity"
             android:screenOrientation="landscape">
             >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
         <activity
             android:name=".BaseInfoShowActivity"
@@ -39,6 +40,24 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
+
+        <service
+            android:name=".service.FaceDetectService"
+            android:enabled="true"
+            android:exported="true" />
+        <service android:name=".service.PersonDetectService"
+            android:enabled="true"
+            android:exported="true"
+            />
+
+
+        <activity android:name=".MainTestActivity">
+             <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
+             <category android:name="android.intent.category.LAUNCHER" />
+             </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
