--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,10 @@ android {
                 cppFlags ""
             }
         }
+
+        ndk {
+            abiFilters( "armeabi-v7a")
+        }
     }
     buildTypes {
         release {
@@ -26,6 +30,12 @@ android {
             path "CMakeLists.txt"
         }
     }
+    sourceSets{
+        main{
+            jniLibs.srcDirs =['libs']
+        }
+    }
+
 }
 
 dependencies {
@@ -38,7 +48,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation files('libs/libreadface.jar')
     implementation 'com.contrarywind:Android-PickerView:3.2.7'
-    //    compile 'com.contrarywind:Android-PickerView:4.1.2'
+    //    compile 'com.contrarywind:Android-PickerView:4.1.2'//请不要更新
     implementation 'com.bigkoo:quicksidebar:1.0.3'
     implementation files('libs/OrbbecSDK_v1.1.4_170224_pro.jar')
 }
