--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".readface.BaseApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,7 +23,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".PersonListActivity"
+            android:name="com.yyd.yydrobotcv.activity.PersonListActivity"
             android:screenOrientation="landscape">
             >
             <!--<intent-filter>-->
@@ -58,7 +59,6 @@
              </intent-filter>
         </activity>
 
-        <activity android:name=".activity.PersonListActivity"/>
 
     </application>
 
