--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 
         <activity
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"
             android:name=".RegisterActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape">
