--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,12 @@
             android:enabled="true"
             android:exported="true" />
 
+        <provider
+            android:exported="true"
+            android:authorities="com.yydrobo.yydrobotcv"
+            android:name=".useralbum.UserDataSupport">
+        </provider>
+
     </application>
 
 </manifest>
